--- a/matchthediffVR/Config/DefaultGame.ini
+++ b/matchthediffVR/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A38FF2BB4E9DAE98588286B39F9430D4
+bStartInVR=True
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
