vr player and game mode

--- a/matchthediffVR/Config/DefaultEngine.ini
+++ b/matchthediffVR/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/default.default
 
 
 EditorStartupMap=/Game/Maps/default.default
+GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
