--- a/matchthediffVR/Config/DefaultEngine.ini
+++ b/matchthediffVR/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/default.default
+GameDefaultMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 
 
-EditorStartupMap=/Game/Maps/default.default
+EditorStartupMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
