redo of the portal system

--- a/matchthediffVR/Config/DefaultInput.ini
+++ b/matchthediffVR/Config/DefaultInput.ini
@@ -80,7 +80,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="gripLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
 +ActionMappings=(ActionName="GripRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
 +ActionMappings=(ActionName="TP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
-+ActionMappings=(ActionName="unassigned left gri[p",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="unassigned left grip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="Swap Houses",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_FaceButton2)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
