--- a/matchthediffVR/Config/SteamVRBindings/steamvr_manifest.json
+++ b/matchthediffVR/Config/SteamVRBindings/steamvr_manifest.json
@@ -156,11 +156,15 @@
 			"type": "boolean"
 		},
 		{
-			"name": "/actions/main/in/MoveForward axis",
-			"type": "vector1"
+			"name": "/actions/main/in/TP",
+			"type": "boolean"
 		},
 		{
-			"name": "/actions/main/in/MoveRight axis",
+			"name": "/actions/main/in/Swap Houses",
+			"type": "boolean"
+		},
+		{
+			"name": "/actions/main/in/genericaxis axis",
 			"type": "vector1"
 		}
 	],
@@ -171,6 +175,106 @@
 		}
 	],
 	"default_bindings": [
+		{
+			"controller_type": "gamepad",
+			"binding_url": "gamepad.json"
+		},
+		{
+			"controller_type": "holographic_controller",
+			"binding_url": "holographic_controller.json"
+		},
+		{
+			"controller_type": "hpmotioncontroller",
+			"binding_url": "hpmotioncontroller.json"
+		},
+		{
+			"controller_type": "indexhmd",
+			"binding_url": "indexhmd.json"
+		},
+		{
+			"controller_type": "knuckles",
+			"binding_url": "knuckles.json"
+		},
+		{
+			"controller_type": "oculus_touch",
+			"binding_url": "oculus_touch.json"
+		},
+		{
+			"controller_type": "rift",
+			"binding_url": "rift.json"
+		},
+		{
+			"controller_type": "vive",
+			"binding_url": "vive.json"
+		},
+		{
+			"controller_type": "vive_controller",
+			"binding_url": "vive_controller.json"
+		},
+		{
+			"controller_type": "vive_cosmos_controller",
+			"binding_url": "vive_cosmos_controller.json"
+		},
+		{
+			"controller_type": "vive_pro",
+			"binding_url": "vive_pro.json"
+		},
+		{
+			"controller_type": "vive_tracker",
+			"binding_url": "vive_tracker.json"
+		},
+		{
+			"controller_type": "vive_tracker_camera",
+			"binding_url": "vive_tracker_camera.json"
+		},
+		{
+			"controller_type": "vive_tracker_chest",
+			"binding_url": "vive_tracker_chest.json"
+		},
+		{
+			"controller_type": "vive_tracker_handed",
+			"binding_url": "vive_tracker_handed.json"
+		},
+		{
+			"controller_type": "vive_tracker_keyboard",
+			"binding_url": "vive_tracker_keyboard.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_elbow",
+			"binding_url": "vive_tracker_left_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_foot",
+			"binding_url": "vive_tracker_left_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_knee",
+			"binding_url": "vive_tracker_left_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_left_shoulder",
+			"binding_url": "vive_tracker_left_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_elbow",
+			"binding_url": "vive_tracker_right_elbow.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_foot",
+			"binding_url": "vive_tracker_right_foot.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_knee",
+			"binding_url": "vive_tracker_right_knee.json"
+		},
+		{
+			"controller_type": "vive_tracker_right_shoulder",
+			"binding_url": "vive_tracker_right_shoulder.json"
+		},
+		{
+			"controller_type": "vive_tracker_waist",
+			"binding_url": "vive_tracker_waist.json"
+		},
 		{
 			"controller_type": "knuckles",
 			"binding_url": "knuckles.json"
@@ -306,8 +410,9 @@
 			"/actions/main/in/open_console": "Open Console",
 			"/actions/main/in/gripLeft": "gripLeft",
 			"/actions/main/in/GripRight": "GripRight",
-			"/actions/main/in/MoveForward axis": "MoveForward",
-			"/actions/main/in/MoveRight axis": "MoveRight",
+			"/actions/main/in/TP": "TP",
+			"/actions/main/in/Swap Houses": "Swap Houses",
+			"/actions/main/in/genericaxis axis": "genericaxis",
 			"/actions/main": "Main Game Actions"
 		}
 	]
