--- a/matchthediffVR/Config/DefaultEngine.ini
+++ b/matchthediffVR/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Maps/MainMenu1.MainMenu1
 
 
-EditorStartupMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Maps/MainMenu1.MainMenu1
 GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
