--- a/matchthediffVR/Config/DefaultGame.ini
+++ b/matchthediffVR/Config/DefaultGame.ini
@@ -2,8 +2,18 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A38FF2BB4E9DAE98588286B39F9430D4
 bStartInVR=True
+CompanyName=none
+CompanyDistinguishedName=self
+Homepage="https://fiery63.wixsite.com/portfoliosite"
+ProjectName=MatchTheDifferenceVR
+Description=VRpuzzlegame
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BEB8D1BC41737D45E897C282B32187DD", "MatchTheDifferenceVR")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BlueprintNativizationMethod=Disabled
+BuildTarget=
 
