--- a/matchthediffVR/Config/DefaultInput.ini
+++ b/matchthediffVR/Config/DefaultInput.ini
@@ -77,9 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="TP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
++ActionMappings=(ActionName="GripLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
 +ActionMappings=(ActionName="GripRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
-+ActionMappings=(ActionName="TPprep",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Touch)
++ActionMappings=(ActionName="TP",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
++ActionMappings=(ActionName="unassigned left grip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="Swap Houses",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Y_Click)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_B_Click)
 +AxisMappings=(AxisName="genericaxis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Click)
